name:                sheet-parsing-tests
version:             0.1.0.0
homepage:            https://github.com/qrilka/sheet-parsing-tests#readme
license:             BSD3
license-file:        LICENSE
author:              Kirill Zaborsky
maintainer:          qrilka@gmail.com
copyright:           2017 Kirill Zaborsky
category:            Test
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

benchmark bench
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is: Main.hs
  build-depends: base
               , bytestring
               , conduit
               , criterion
               , deepseq
               , exceptions
               , extra
               , hexpat
               , mtl
               , resourcet
               , safe
               , text
               , xml-conduit
               , xml-types

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sheet-parsing-tests
