name:                sheet-parsing-tests
version:             0.1.0.0
homepage:            https://github.com/qrilka/sheet-parsing-tests#readme
license:             BSD3
license-file:        LICENSE
author:              Kirill Zaborsky
maintainer:          qrilka@gmail.com
copyright:           2017 Kirill Zaborsky
category:            Test
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options: -Wall
  hs-source-dirs: src
  build-depends: base
               , bytestring
               , conduit
               , exceptions
               , hexpat
               , hexml
               , safe
               , text
               , xml-conduit
  exposed-modules: XMLParsers
  other-modules: XMLParsers.Common
                 XMLParsers.Hexml
                 XMLParsers.Hexpat.SAX
                 XMLParsers.Hexpat.Tree
                 XMLParsers.Types
                 XMLParsers.XmlConduit.Common
                 XMLParsers.XmlConduit.Cursor
                 XMLParsers.XmlConduit.Stream
  default-language: Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  hs-source-dirs: benchmarks
  main-is: Main.hs
  build-depends: base
               , bytestring
               , criterion
               , sheet-parsing-tests
  default-language: Haskell2010

test-suite weigh
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  hs-source-dirs: weigh
  main-is: Main.hs
  build-depends: base
               , bytestring
               , sheet-parsing-tests
               , weigh
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sheet-parsing-tests
